@@ -2,8 +2,11 @@ Dev Version:
 
 - Java:
 -- add CORE function: formline
+-- 'form' CORE function initial implementation
 
-- add Perlito5/Runtime/Formline.pm for CORE::formline() implementation
+- Core compiler:
+-- 'form' compiler
+-- add Perlito5/Runtime/Formline.pm for CORE::formline() implementation
 
 9.026 cpan:Perlito5 2018-06-13
 
